Store create and some functional testing added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,26 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-
-<%= yield %>
-
+<body class="<%= controller.controller_name %>">
+  <div id="banner">
+    <%= image_tag "logo.png" %>
+    <%= @page_title ||"Pragmatic Bookshelf" %>
+  </div>
+  
+  <div id="columns">
+    <div id="side">
+       <ul>
+         <li><a href="http://bestwhich.com">Home</a></li>
+         <li><a href="http://bestwhich.com">Questions</a></li>
+         <li><a href="http://bestwhich.com">News</a></li>
+         <li><a href="http://bestwhich.com">Contacts</a></li>
+         <li class="dated">Updated: <%= @current_time %></li>
+       </ul>
+    </div>
+    
+		<div id="main">
+			<%= yield %>
+		</div>
+  </div>
 </body>
 </html>
