--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,13 +45,12 @@
     padding: 1em 2em;
     width: 13em;
     background: #141;
-
     ul {
       padding: 0;
+      .dated {color:white;}
 
       li {
         list-style: none;
-
         a {
           color: #bfb;
           font-size: small;
@@ -60,4 +59,7 @@
     }
   }
 }
+        
+
+
 /* END_HIGHLIGHT */
