Task D with playtime done

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,16 +1,18 @@
 <% if notice %>
   <p id="notice"><%= notice %></p>
 <% end %>
+<%= session_counter %>
 
 <h1>Your Pragmatic Catalog</h1>
 
 <% @products.each do |product| %>
   <div class="entry">
-    <%= image_tag product.image_url %>
+    <%= link_to(image_tag(product.image_url), line_items_path(product: product), method: :post) %>
     <h3><%= product.title %></h3>
     <%= sanitize(product.description) %>
     <div class="price_line">
       <span class="price"><%= number_to_currency(product.price) %></span>
     </div>
+    <%= button_to "Add to Cart", line_items_path(product_id: product) %>
   </div>
 <% end %>
