--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -15,6 +15,7 @@
   .entry {
     overflow: auto;
     margin-top: 1em;
+    padding-bottom: 1em;
     border-bottom: 1px dotted #77d;
     min-height: 100px;
     img {
@@ -35,6 +36,9 @@
       margin-top: 0.5em;
       margin-bottom: 0.8em;
     }
+    form, div {
+        display: inline;
+      }
     .price {
       color: #44a;
       font-weight: bold;
