--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,10 +1,21 @@
-<p id="notice"><%= notice %></p>
+<div class="cart_title">Your Cart</div>
 
-<h2>Your Pragmatic Cart</h2>
-<ul>
-  <% @cart.line_items.each do |item| %>
-    <li><%= item.product.title %></li>
-  <% end %>
-</ul>
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<table>
+<% @cart.line_items.each do |item| %>
+  <tr>
+    <td><%= item.quantity %> &times; </td>
+
+    <td><%= item.product.title %></td>
+    <td class="item_price"><%= number_to_currency(item.total_price) %></td>
+  </tr>  
+<% end %>
+  <tr>  
+    <td colspan="2">Total</td>
+    <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
+  </tr>
+</table>
+
+<br/>
+
+<%= button_to 'Empty Cart', @cart, method: :delete %>
+
