--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 </head>
 <body class="<%= controller.controller_name %>">
   <div id="banner">
-    <%= image_tag "logo.png" %>
+    <%= link_to(image_tag("logo.png"), store_path) %>
+
     <%= @page_title ||"Pragmatic Bookshelf" %>
   </div>
   
