--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -7,7 +7,7 @@
 
 <% @products.each do |product| %>
   <div class="entry">
-    <%= link_to(image_tag(product.image_url), line_items_path(product: product), method: :post) %>
+    <%= link_to(image_tag(product.image_url), line_items_path(product_id: product.id), method: :post) %>
     <h3><%= product.title %></h3>
     <%= sanitize(product.description) %>
     <div class="price_line">
