--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,18 +34,44 @@
 
 #columns {
   background: #141;
-
+  height: 35em;
+ 
   #main {
-    margin-left: 17em;
     padding: 1em;
+    width:78em;
     background: white;
+    float:right
   }
 
   #side {
     float: left;
     padding: 1em 2em;
-    width: 13em;
+    width: 20em;
     background: #141;
+    form, div {
+      display: inline;
+      padding-left:10px;
+    }
+    input {
+      font-size: small;
+    }
+    #cart {
+      font-size: smaller;
+      color: white;
+    }
+    table {
+     border-top: 1px dotted #595;
+     border-bottom: 1px dotted #595;
+     margin-bottom: 10px;
+     tr:nth-last-child(-2n+2) {
+    /* background-color: red; */
+     }
+     td a {
+       color:white;
+       font-size: large;
+       text-decoration: none;
+      }
+    }
     ul {
       padding: 0;
       .dated {color:white;}
@@ -59,8 +85,8 @@
       }
     }
   }
-}
-        
+}    
+
 
 
 /* END_HIGHLIGHT */
