--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
   
   <div id="columns">
     <div id="side">
+      <% if @cart %>
+				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+					<%= render @cart %>
+				<% end %>
+			<% end %>
        <ul>
          <li><a href="http://bestwhich.com">Home</a></li>
          <li><a href="http://bestwhich.com">Questions</a></li>
