--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -7,12 +7,13 @@
 
 <% @products.each do |product| %>
   <div class="entry">
-    <%= link_to(image_tag(product.image_url), line_items_path(product_id: product.id), method: :post) %>
+    <%#= link_to(image_tag(product.image_url), line_items_path(product_id: product.id), method: :post) %> 
+    <%= image_tag(product.image_url) %>
     <h3><%= product.title %></h3>
     <%= sanitize(product.description) %>
     <div class="price_line">
       <span class="price"><%= number_to_currency(product.price) %></span>
     </div>
-    <%= button_to "Add to Cart", line_items_path(product_id: product) %>
+    <%= button_to "Add to Cart", line_items_path(product_id: product), remote: true %>
   </div>
 <% end %>
