--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -11,4 +11,6 @@
 
 <br/>
 
-<%= button_to 'Empty Cart', cart, method: :delete, :confirm => "Are you sure?" %>
+<%= button_to 'Checkout', new_order_path, method: :get, :disabled => @order.present? %>
+
+<%= button_to 'Empty Cart', cart, method: :delete, :confirm => "Are you sure?", :disabled => @order.present? %>
