--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,14 @@
          <li><a href="http://bestwhich.com">Contacts</a></li>
          <li class="dated">Updated: <%= @current_time %></li>
        </ul>
+			<% if session[:user_id] %>
+       <ul>
+         <li><%= link_to 'Orders', orders_path %></li>
+         <li><%= link_to 'Products', products_path %></li>
+         <li><%= link_to 'Users', users_path %></li>
+       </ul>   
+       <%= button_to 'Logout', logout_path, method: :delete %></li>
+			<% end %>
     </div>
     
 		<div id="main">
