--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -10,7 +10,7 @@
     <td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
     <td><%#= button_to 'Delete', line_item, :method => :delete, :confirm => 'Are You Sure' %></td>
     
-    <td><%= link_to image_tag("down_arrow.png"), decrease_line_item_path(line_item), :method => :put, remote: true %></td>
-    <td><%= link_to image_tag("up_arrow.png"), increase_line_item_path(line_item), :method => :put, remote: true %></td>
+    <td><%#= link_to image_tag("down_arrow.png"), decrease_line_item_path(line_item), :method => :put, remote: true %></td>
+    <td><%#= link_to image_tag("up_arrow.png"), increase_line_item_path(line_item), :method => :put, remote: true %></td>
 
   </tr>  
